--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" href="./logo.svg" type="image/x-icon">
-    <title>Book lover</title>
+    <title>Clevr</title>
   </head>
   <body>
     <div id="root"></div>
